[tool.poetry]
name = "BrassMono"
version = "0.1.0"
description = ""
authors = ["Peter Fonseca <peter.nfonseca@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fontbakery = "^0.7.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
